# studentsDataBase

./: CMakeLists.txt  Makefile.txt  main.cpp  tests.cpp
.github/workflows/: cicd.yml
